<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_movie_settings">

        <SwitchPreference
            android:key= "@string/pref_dev_location_key"
            android:title="@string/pref_dev_location_title"
            android:summary="@string/pref_dev_location_summary"
            android:defaultValue="true"
            android:disableDependentsState="true"/>

        <EditTextPreference
            android:key= "@string/pref_custom_location_key"
            android:title="@string/pref_custom_location_title"
            android:summary="@string/pref_custom_location_summary"
            android:defaultValue="@string/locationMadrid"
            android:dependency="@string/pref_dev_location_key"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Language">
        <ListPreference
            android:key="@string/pref_language_key"
            android:title="@string/pref_language_title"
            android:summary="%s"
            android:defaultValue="SPANISH"
            android:entries="@array/languageValuesEntries"
            android:entryValues="@array/languageValues" />

    </PreferenceCategory>

</PreferenceScreen>