<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.javimar.mymoviesac.MainActivity">

    <item
        android:id="@+id/action_popular"
        android:orderInCategory="100"
        android:title="@string/action_popular_movies"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new"
        android:orderInCategory="110"
        android:title="@string/action_new_movies"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="115"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />

</menu>